crates/plotnik-lib/tests/02-parser/recovery_unclosed/missing_paren.txt
Q = (identifier
------------------ DIAGNOSTICS -------------------
error: missing closing `)`
 --> query.ptk:1:5
  |
1 | Q = (identifier
  |     -^^^^^^^^^^
  |     |
  |     node started here
  |
help: add `)` to close the node
